feat: add and configure fontawesome and font Roboto

--- a/index.html
+++ b/index.html
@@ -5,35 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Booking</title>
+
+    <!-- Reset CSS -->
     <link rel="stylesheet" href="/minimal-reset.css">
-<!--     
-    <style type="text/css">
-      /* Minimal CSS Reset */
-      html {
-        box-sizing: border-box;
-        font-size: 16px;
-      }
 
-      *, *:before, *:after {
-        box-sizing: inherit;
-      }
-
-      body, h1, h2, h3, h4, h5, h6, p, ol, ul {
-        margin: 0;
-        padding: 0;
-        font-weight: normal;
-      }
-
-      ol, ul {
-        list-style: none;
-      }
-
-      img {
-        max-width: 100%;
-        height: auto;
-      }
-    </style>
-     -->
+    <!-- Google Font: Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;600;700;900&display=swap" rel="stylesheet">
+    
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/05dc0ab876.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
